# pinboard

./: CLAUDE.md  README.md  api.py  config.yaml  keybindings.py  main.py  pyproject.toml  undo_manager.py  window.py
commands/: open.py  push.py
models/: note.py
src/pinboard/: __init__.py  api.py  keybindings.py  window.py
src/pinboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pinboard/commands/: open.py  push.py
src/pinboard/storage/: yaml_storage.py
src/pinboard/widgets/: canvas.py  note_item.py  toast.py
storage/: yaml_storage.py
widgets/: canvas.py  minimap.py  note_item.py  text_overlay.py
